--- a/style.css
+++ b/style.css
@@ -13,11 +13,12 @@ body {
 }
 
 #logo {
-    background-image: url('assets/logo.png');
-    width: 100%;
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center top;
-    height: 650px;
-    padding-top: 20px;
+    display: grid;
+    height: 100%;
+}
+
+.center-fit {
+    max-width: 100%;
+    max-height: 100vh;
+    margin: auto;
 }
