--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@ body {
     padding: 0;
     margin: 0;
     background-color: black;
+    background-image: url('assets/space.gif');
 }
 
 #earth_div {
