--- a/style.css
+++ b/style.css
@@ -5,6 +5,13 @@ body {
 }
 
 #earth_div {
+    top: 100;
+    right: 100;
+    bottom: 100;
+    left: 100;
+    position: absolute !important;
+}
+#moon_div {
     top: 0;
     right: 0;
     bottom: 0;
