--- a/style.css
+++ b/style.css
@@ -2,7 +2,10 @@ body {
     padding: 0;
     margin: 0;
     background-color: black;
-    background-image: url('assets/space.gif');
+    background-image: url('assets/spaceimage.jpg');
+    max-width: 100%;
+    max-height: 100%;
+    background-repeat: no-repeat;
 }
 
 #earth_div {
