--- a/style.css
+++ b/style.css
@@ -2,8 +2,7 @@ body {
     padding: 0;
     margin: 0;
     background-color: black;
-    background-image: url('assets/spaceimage.jpg');
-
+    background-image: url('assets/spaceimage.png');
 }
 
 #earth_div {
@@ -13,6 +12,7 @@ body {
     left: 0;
     position: absolute !important;
 }
+
 #moon_div {
     top: 0;
     right: 0;
