--- a/style.css
+++ b/style.css
@@ -17,10 +17,11 @@ body {
 }
 
 #moon_div {
-    top: 100;
-    right: 100;
-    bottom: 100;
-    left: 100;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    position: absolute !important;
 }
 
 #logo {
