--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body {
     padding: 0;
     margin: 0;
     background-color: black;
-    background-image: url('assets/spaceimage.png');
+    background-image: url('assets/spaceimage.jpg');
     height: 100%;
 }
 
