--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body {
     right: 0;
     bottom: 0;
     left: 0;
-    position: absolute !important;
+    position: absolute;
     /*important is the reason we can't move the earth while having 
       moon as the moons important takes priority (i think)*/
 }
@@ -21,7 +21,7 @@ body {
     right: 0;
     bottom: 0;
     left: 0;
-    position: absolute !important;
+    position: absolute;
 }
 
 #logo {
