--- a/style.css
+++ b/style.css
@@ -7,21 +7,23 @@ body {
 }
 
 #earth_div {
+    position: absolute !important;
+    /*important is the reason we can't move the earth while having 
+      moon as the moons important takes priority (i think)*/
     top: 0;
     right: 0;
     bottom: 0;
     left: 0;
-    position: absolute;
-    /*important is the reason we can't move the earth while having 
-      moon as the moons important takes priority (i think)*/
+    
 }
 
 #moon_div {
+    position: absolute;
     top: 0;
     right: 0;
     bottom: 0;
     left: 0;
-    position: absolute;
+    
 }
 
 #logo {
